# Clockwork

./: .drone.yml  .gitignore  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
asset_storage/: Cargo.toml
asset_storage/src/: asset_storage.rs  lib.rs
asset_storage/tests/: asset_storage.rs
assets/: Cargo.toml
assets/src/: lib.rs  mesh.rs  mesh_vertex.rs
core/: Cargo.toml
core/src/: clockwork.rs  lib.rs  mechanism.rs  sync.rs
core/tests/: clockwork.rs  clockwork_builder.rs  sync.rs
engine/: Cargo.toml
engine/src/: base_state.rs  lib.rs
engine/src/base_state/: assets_wrapper.rs  legion_rapier_wrapper.rs  scene_impls.rs  scene_instance.rs
kernel/: Cargo.toml
kernel/src/: base_event.rs  clockwork.rs  lib.rs  main_loop.rs  mechanism.rs  state.rs
kernel/src/abstract_runtime/: event.rs  main_loop.rs  mechanism.rs  state.rs
kernel/src/graphics/: layer_key.rs  light.rs  light_components.rs  scene.rs  scene_object.rs  scene_object_components.rs  vertex.rs
kernel/src/math/: matrix.rs
kernel/src/standard_runtime/: event.rs  mechanism.rs  statistics.rs
kernel/src/util/: init_state.rs
kernel/tests/: clockwork.rs  clockwork_builder.rs  sync.rs
legion_ecs/: Cargo.toml
legion_ecs/src/: lib.rs  mechanism.rs  state.rs
main_loop/: Cargo.toml
main_loop/src/: event.rs  lib.rs  main_loop.rs  state.rs
main_loop/src/state/: input.rs  statistics.rs  winit_loop.rs
rapier_physics_3d/: Cargo.toml
rapier_physics_3d/src/: lib.rs  mechanism.rs  state.rs
scene_utils/: Cargo.toml
scene_utils/src/: lib.rs  mesh.rs  mesh_vertex.rs
scene_utils/src/components/: camera.rs  light.rs  material.rs
scene_utils/src/fields/: attenuation.rs  color.rs  texture.rs
vulkano_graphics/: Cargo.toml
vulkano_graphics/src/: graphics_state.rs  lib.rs  mechanism.rs  state.rs  triangle_layer.rs  vulkano_layer.rs
vulkano_layers/: Cargo.toml
vulkano_layers/glsl/: colored_mesh_drawer.frag  colored_mesh_drawer.vert  skybox_drawer.frag  skybox_drawer.vert  static_mesh_drawer.frag  static_mesh_drawer.vert
vulkano_layers/glsl_lib/: light.glsl  phong_material.glsl  vertex.glsl
vulkano_layers/src/: colored_mesh_drawer.rs  lib.rs  util.rs
vulkano_layers/src/colored_mesh_drawer/: buffered_mesh.rs  fragment.glsl  fragment_shader.rs  instance_data.rs  mod.rs  util.rs  vertex.glsl  vertex.rs  vertex_shader.rs
vulkano_layers/src/skybox_drawer/: buffered_mesh.rs  inner_state.rs  mod.rs  state_requirements.rs
vulkano_layers/src/static_mesh_drawer/: buffered_mesh.rs  inner_state.rs  mod.rs  state_requirements.rs
