[package]
name = "spc_clockwork_asset_storage"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.21"
strum_macros = "0.21"

[dependencies.clockwork_core]
package = "spc_clockwork_core"
path = "../core"
