[package]
name = "spc_clockwork"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.10.2"

[dependencies.clockwork_core]
path = "../core"
package = "spc_clockwork_core"

[dependencies.ecs]
path = "../legion_ecs"
package = "spc_clockwork_legion_ecs"

[dependencies.main_loop]
path = "../main_loop"
package = "spc_clockwork_main_loop"

[dependencies.physics]
path = "../rapier_physics_3d"
package = "spc_clockwork_rapier_physics_3d"

[dependencies.graphics]
path = "../vulkano_graphics"
package = "spc_clockwork_vulkano_graphics"

[dependencies.vulkano_layers]
path = "../vulkano_layers"
package = "spc_clockwork_vulkano_layers"

[dependencies.scene]
path = "../scene_utils"
package = "spc_clockwork_scene_utils"

[dependencies.asset_storage]
path = "../asset_storage"
package = "spc_clockwork_asset_storage"
