[package]
name = "spc_clockwork_kernel"
version = "0.1.0"
authors = ["Yaroslav V. Petrov <yaroslav.v.petrov@yandex.ru>"]
edition = "2018"

[dependencies]
log = "0.4.14"
itertools = "0.10.0"
no_deadlocks = "1.2.0"
derive_builder = "0.10.2"
getset = "0.1.1"
thiserror = "1.0.30"

[dependencies.ambassador]
git = "https://github.com/SteampunkCrafting/ambassador.git"
rev = "c96ac3c155a9641258b778169997c0e4fb37495d"

# rev = "c1ca887ea768acb1065cf504f35bf63389fcf5fe"

[dependencies.serde]
version="1.0.136" 
features = ["derive"]
