[package]
name = "spc_clockwork_legion_ecs"
version = "0.1.0"
authors = ["Yaroslav V. Petrov <yaroslav.v.petrov@yandex.ru>"]
edition = "2018"

[dependencies.kernel]
package = "spc_clockwork_kernel"
path = "../kernel"

[dependencies]
getset = "0.1.1"
derive_builder = "0.10.0"
log = "0.4.14"
legion = "0.4.0"
lazycell = "1.3.0"
