[package]
name = "spc_clockwork_main_loop"
version = "0.1.0"
authors = ["Yaroslav V. Petrov <yaroslav.v.petrov@yandex.ru>"]
edition = "2018"

[dependencies.kernel]
package = "spc_clockwork_kernel"
path = "../kernel"

[dependencies]
egui_winit_vulkano = "0.12.0"
winit = "0.25.0"
derive_builder = "0.10.2"
