[package]
name = "spc_clockwork_rapier_physics_3d"
version = "0.1.0"
authors = ["Yaroslav V. Petrov <yaroslav.v.petrov@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier3d = { version = "*", features = ["simd-stable"] }
derive_builder = "0.10.2"

[dependencies.kernel]
package = "spc_clockwork_kernel"
path = "../kernel"
