[package]
name = "spc_clockwork_scene_utils"
version = "0.1.0"
edition = "2018"

[dependencies]
getset = "0.1.1"

[dependencies.clockwork_core]
package = "spc_clockwork_core"
path = "../core"

[dependencies.asset_storage]
package = "spc_clockwork_asset_storage"
path = "../asset_storage"

[dependencies.physics]
package = "spc_clockwork_rapier_physics_3d"
path = "../rapier_physics_3d"
