[package]
name = "spc_clockwork_scene_utils"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = "1.*"
obj-rs = "0.7.0"
png = "0.15.0"

[dependencies.kernel]
package = "spc_clockwork_kernel"
path = "../kernel"

[dependencies.asset_storage]
package = "spc_clockwork_asset_storage"
path = "../asset_storage"

[dependencies.physics]
package = "spc_clockwork_rapier_physics_3d"
path = "../rapier_physics_3d"
