[package]
name = "spc_clockwork_vulkano_graphics"
version = "0.1.0"
edition = "2018"

[dependencies]
vulkano = "0.26.0"
vulkano-win = "0.26.0"
vulkano-shaders = "0.26.0"
winit = "0.25.0"
egui_winit_vulkano = "0.12.0"
derive_builder = "0.10.2"

[dependencies.kernel]
package = "spc_clockwork_kernel"
path = "../kernel"

[dependencies.main_loop]
package = "spc_clockwork_main_loop"
path = "../main_loop"

[dependencies.asset_storage]
package = "spc_clockwork_asset_storage"
path = "../asset_storage"

[dependencies.scene_utils]
package = "spc_clockwork_scene_utils"
path = "../scene_utils"

[dependencies.legion_ecs]
package = "spc_clockwork_legion_ecs"
path = "../legion_ecs"

[dependencies.rapier_physics_3d]
package = "spc_clockwork_rapier_physics_3d"
path = "../rapier_physics_3d"
